[package]
name = "slip44"
version = "0.1.2"
authors = ["Alexey Shekhirin <alexey@shekhirin.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/slip44"
repository = "https://github.com/shekhirin/slip44"
homepage = "https://docs.rs/slip44"
description = """
Mapping between SLIP-0044 coin types and the associated metadata.
"""
keywords = ["web3", "cryptocurrency"]

[dependencies]
itertools = { version = "0.10.1", optional = true }
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }

[features]
parse-coins = ["itertools", "reqwest"]

[[bin]]
name = "parse-coins"
path = "src/bin/parse_coins.rs"
required-features = ["parse-coins"]
